File seletion rules extended / updated .

--- a/Mirko_Divididende_V01.ipynb
+++ b/Mirko_Divididende_V01.ipynb
@@ -27,10 +27,15 @@
         "from operator import itemgetter\n",
         "import time\n",
         "\n",
-        "#from google.colab import drive\n",
-        "#drive.mount('/content/drive')\n",
+        "from google.colab import auth\n",
+        "auth.authenticate_user()\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
         "\n",
         "# COMDIRECT postbox nach \"Konto/Depotmitteilung\" filtern\n",
+        "# Benoetigte Dokumente : \"Dividendengutschrift_\", \"Ertragsgutschrift_\", \"Zinsgutschrift_\"\n",
+        "# zo entfernende Dokumente : \"Ankündigung_Rückzahlung_\", \"Einlösung_\"\n",
         "Input_Folder  = '/content/drive/MyDrive/Dividenden_Script/Input_PDF'\n",
         "Output_Folder = '/content/drive/MyDrive/Dividenden_Script/Output_Excel/'\n",
         "\n",
@@ -122,6 +127,12 @@
         "    else:\n",
         "        Ausschüttung_b = False\n",
         "\n",
+        "    x = ptext.rfind('Ertragsgutschrift')\n",
+        "    if x > 0:\n",
+        "        Ertragsgutschrift_b = True\n",
+        "    else:\n",
+        "        Ertragsgutschrift_b = False\n",
+        "\n",
         "    x = ptext.rfind('Quellensteuer')\n",
         "    if x > 0:\n",
         "        Quellensteuer_b = True\n",
@@ -129,7 +140,7 @@
         "        Quellensteuer_b = False\n",
         "\n",
         "    # Aktie oder Fond\n",
-        "    if Dividende_b == True or Ausschüttung_b == True :\n",
+        "    if Dividende_b == True or Ausschüttung_b == True or Ertragsgutschrift_b == True  :\n",
         "\n",
         "        # 'Wertpapier-Bezeichnung'\n",
         "        string1 = ''\n",
@@ -168,7 +179,7 @@
         "          myList2.append('n.a.')\n",
         "          myList2.append('n.a.')\n",
         "\n",
-        "        # 'Dividende' / 'Ausschüttung'\n",
+        "        # 'Dividende' / 'Ausschüttung' / 'Ertragsgutschrift'\n",
         "        if Dividende_b == True :\n",
         "\n",
         "          index1 = search_list(myList1, 'Dividende')\n",
@@ -181,6 +192,15 @@
         "        elif Ausschüttung_b == True :\n",
         "\n",
         "          index1 = search_list(myList1, 'Ausschüttung')\n",
+        "          myList2.append(myList1[index1])\n",
+        "          index1 = search_list(myList1, 'Bruttobetrag:')\n",
+        "          myList2.append(myList1[index1])\n",
+        "          myList2.append(myList1[index1+1])\n",
+        "          myList2.append(convert_string2float(myList1[index1+2])) # Convert to float\n",
+        "\n",
+        "        elif Ertragsgutschrift_b == True :\n",
+        "\n",
+        "          index1 = search_list(myList1, 'Ertragsgutschrift')\n",
         "          myList2.append(myList1[index1])\n",
         "          index1 = search_list(myList1, 'Bruttobetrag:')\n",
         "          myList2.append(myList1[index1])\n",
@@ -298,9 +318,6 @@
         "    print('PDFs gelesen ...')\n",
         "\n",
         "\n",
-        "# print result list\n",
-        "#print(myList_all)\n",
-        "\n",
         "\n",
         "\n",
         "# Create a DataFrame\n",
@@ -325,13 +342,47 @@
         "    df1.to_excel(writer, sheet_name='Raw_Data', index=False)\n",
         "    df2.to_excel(writer, sheet_name='Processed_Data', index=False)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TWlQ_VDW_Dlo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "elbHiqoR_Eww"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fUV3xRJS_E_v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "svxvcTXXy0VR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1CykMY9gHLYEVyR7SUAtl65eZ_YLduco6",
-      "authorship_tag": "ABX9TyMxLrBgdnG3cyaFsPIvysIM",
+      "authorship_tag": "ABX9TyMaIM+folaZfoJGmmLvnaX+",
       "include_colab_link": true
     },
     "kernelspec": {
