Mit Colab erstellt

--- a/Mirko_Divididende.ipynb
+++ b/Mirko_Divididende.ipynb
@@ -45,7 +45,7 @@
         "# Steuermitteilung der eingeloessten BUNDANLEIHEN kopieren\n",
         "\n",
         "#C) NICHT UNTERSTUETZT\n",
-        "# Aktien-Veraesserungsgewinne :\n",
+        "# Aktien-/Anleihen-Veraeusserungsgewinne :\n",
         "# Dafuer in postbox nach \"Ordermitteilungen\" Dokumenten filtern .\n",
         "# Benoetigte Dokumente : \"Wertpapierabrechnung Verkauf\"\n",
         "\n",
@@ -105,7 +105,7 @@
         "\n",
         "\n",
         "    # Pruefe ob es sich um Anleihe handelt\n",
-        "    x = ptext.rfind('Zinsgutschrift')\n",
+        "    x = ptext.rfind('Zinsen')\n",
         "    if x > 0:\n",
         "        ZinsenStaatsanleihe_b = True\n",
         "    else:\n",
@@ -152,49 +152,36 @@
         "    # remove not required items\n",
         "    #myList1.remove(\"abc\")\n",
         "\n",
-        "    if not AnleiheEinloesung_b:\n",
-        "      # remove first element from list : '/SP010000/SP0...'\n",
-        "      myList1.pop(0)\n",
-        "      #print(myList1)\n",
         "\n",
-        "      # Depotnummer\n",
-        "      index1 = search_list(myList1, 'Depotnr.:')\n",
-        "      myList2.append(myList1[index1])\n",
-        "      myList2.append(myList1[index1+1])\n",
-        "\n",
-        "      # 'Inhaber'\n",
-        "      string1 = ''\n",
-        "      index1 = search_list(myList1, 'Thulke')\n",
-        "      for x in range(2, index1+1):\n",
-        "       string1 = string1 + ' ' + myList1[x]\n",
-        "      myList2.append('Inhaber')\n",
-        "      myList2.append(string1)\n",
-        "\n",
-        "      # Datum\n",
-        "      myList2.append(myList1[0])\n",
-        "\n",
-        "\n",
-        "\n",
-        "    if AnleiheEinloesung_b :\n",
-        "\n",
-        "      #print(myList1)\n",
-        "\n",
-        "      # Depotnummer\n",
-        "      myList2.append('n.a.')\n",
-        "      myList2.append('n.a.')\n",
-        "\n",
-        "      # 'Inhaber'\n",
-        "      myList2.append('n.a.')\n",
-        "      myList2.append('n.a.')\n",
-        "\n",
-        "      # Datum\n",
-        "      myList2.append('n.a.')\n",
         "\n",
         "\n",
         "\n",
         "    # Aktie oder Fond\n",
         "    if Dividende_b == True or Ausschüttung_b == True or Ertragsgutschrift_b == True  :\n",
         "        print(\"Aktie / Fond : Dividende / Ausschuettung\")\n",
+        "\n",
+        "        # remove first element from list : '/SP010000/SP0...'\n",
+        "        myList1.pop(0)\n",
+        "        #print(myList1)\n",
+        "\n",
+        "        # Depotnummer\n",
+        "        index1 = search_list(myList1, 'Depotnr.:')\n",
+        "        myList2.append(myList1[index1])\n",
+        "        myList2.append(myList1[index1+1])\n",
+        "\n",
+        "        # 'Inhaber'\n",
+        "        string1 = ''\n",
+        "        index1 = search_list(myList1, 'Thulke')\n",
+        "        for x in range(2, index1+1):\n",
+        "          string1 = string1 + ' ' + myList1[x]\n",
+        "        myList2.append('Inhaber')\n",
+        "        myList2.append(string1)\n",
+        "\n",
+        "        # Datum\n",
+        "        myList2.append(myList1[0])\n",
+        "\n",
+        "        # Typ\n",
+        "        myList2.append('Aktie/Fonds')\n",
         "\n",
         "        # 'Wertpapier-Bezeichnung'\n",
         "        string1 = ''\n",
@@ -292,26 +279,43 @@
         "\n",
         "        print(len(myList2))\n",
         "\n",
-        "    # Staatsanleihe ##################\n",
+        "    # Kupon Staatsanleihe, die noch gehalten wird ##################\n",
         "    elif ZinsenStaatsanleihe_b == True :\n",
         "        print(\"Zinsen Staatsanleihe\")\n",
         "\n",
-        "        # 'Wertpapier-Bezeichnung'\n",
-        "        index1 = search_list(myList1, 'Wertpapier-Bezeichnung')\n",
+        "        # Depotnummer\n",
+        "        index1 = search_list(myList1, 'Depotnummer:')\n",
         "        myList2.append(myList1[index1])\n",
-        "        myList2.append(myList1[index1+6])\n",
+        "        myList2.append(myList1[index1+1])\n",
+        "\n",
+        "        # 'Inhaber'\n",
+        "        index1 = search_list(myList1, 'Thulke')\n",
+        "        string1 = \" \" + myList1[index1-3]+ \" \" + myList1[index1-2]+ \" \" + myList1[index1-1]+ \" \" + myList1[index1]\n",
+        "        myList2.append('Inhaber')\n",
+        "        myList2.append(string1)\n",
+        "\n",
+        "        # Datum\n",
+        "        index1 = search_list(myList1, 'Datum:')\n",
+        "        myList2.append(myList1[index1+1])\n",
+        "\n",
+        "        # Typ\n",
+        "        myList2.append('Verzinzte Anleihe')\n",
+        "\n",
+        "        # 'Wertpapier-Bezeichnung'\n",
+        "        index1 = search_list(myList1, 'WKN')\n",
+        "        myList2.append('Wertpapier-Bezeichnung')\n",
+        "        myList2.append(myList1[index1-2])\n",
         "\n",
         "        # 'WKN/ISIN'\n",
-        "        index1 = search_list(myList1, 'WKN/ISIN')\n",
-        "        myList2.append(myList1[index1])\n",
-        "        myList2.append(myList1[index1+8])\n",
-        "        myList2.append('n.a.')\n",
+        "        index1 = search_list(myList1, 'WKN')\n",
+        "        myList2.append('WKN/ISIN')\n",
+        "        myList2.append(myList1[index1+5])\n",
+        "        myList2.append('STK')\n",
         "        myList2.append('n.a.')\n",
         "\n",
         "        # 'Emissionsland:'\n",
-        "        index1 = search_list(myList1, 'Emissionsland:')\n",
-        "        myList2.append(myList1[index1])\n",
-        "        myList2.append(' '+myList1[index1+1])\n",
+        "        myList2.append('Emissionsland:')\n",
+        "        myList2.append('Deutschland')\n",
         "\n",
         "        # 'Devisenkurs:'\n",
         "        myList2.append('n.a.')\n",
@@ -319,11 +323,10 @@
         "        myList2.append('n.a.')\n",
         "\n",
         "        # 'Dividende' / 'Ausschüttung'\n",
+        "        myList2.append('Kupon:')\n",
         "        myList2.append('n.a.')\n",
-        "        index1 = search_list(myList1, 'Bruttobetrag:')\n",
-        "        myList2.append(myList1[index1])\n",
-        "        myList2.append(myList1[index1+1])\n",
-        "        myList2.append(convert_string2float(myList1[index1+2])) # Convert to float\n",
+        "        myList2.append('n.a.')\n",
+        "        myList2.append('n.a.')\n",
         "\n",
         "        # 'Quellensteuer'\n",
         "        myList2.append('n.a.')\n",
@@ -332,38 +335,69 @@
         "        myList2.append('n.a.')\n",
         "        myList2.append('n.a.')\n",
         "\n",
+        "\n",
         "        print(len(myList2))\n",
         "\n",
-        "    # ZERO Kupon Staatsanleihe gehalten bis Faelligkeit ##################\n",
+        "    # Staatsanleihe gehalten bis Faelligkeit ##################\n",
         "    elif AnleiheEinloesung_b == True :\n",
         "        print(\"Anleihe bis Faelligkeit gehalten\")\n",
         "\n",
+        "        print(myList1)\n",
+        "\n",
+        "        # Depotnummer\n",
+        "        index1 = search_list(myList1, 'Depotnummer:')\n",
+        "        myList2.append(myList1[index1])\n",
+        "        myList2.append(myList1[index1+1])\n",
+        "\n",
+        "        # 'Inhaber'\n",
+        "        index1 = search_list(myList1, 'Thulke')\n",
+        "        string1 = \" \" + myList1[index1-3]+ \" \" + myList1[index1-2]+ \" \" + myList1[index1-1]+ \" \" + myList1[index1]\n",
+        "        myList2.append('Inhaber')\n",
+        "        myList2.append(string1)\n",
+        "\n",
+        "        # Datum\n",
+        "        index1 = search_list(myList1, 'Datum:')\n",
+        "        myList2.append(myList1[index1+1])\n",
+        "\n",
+        "        # Typ\n",
+        "        myList2.append('Zero Kupon Anleihe')\n",
+        "\n",
+        "        # 'Wertpapier-Bezeichnung'\n",
+        "        index1 = search_list(myList1, 'WKN')\n",
+        "        myList2.append('Wertpapier-Bezeichnung')\n",
+        "        myList2.append(myList1[index1-2])\n",
+        "\n",
+        "        # 'WKN/ISIN'\n",
+        "        index1 = search_list(myList1, 'WKN')\n",
+        "        myList2.append('WKN/ISIN')\n",
+        "        myList2.append(myList1[index1+5])\n",
+        "        myList2.append('STK')\n",
         "        myList2.append('n.a.')\n",
         "\n",
-        "        myList2.append('n.a.')\n",
-        "        myList2.append('n.a.')\n",
-        "        myList2.append('n.a.')\n",
-        "        myList2.append('n.a.')\n",
-        "\n",
+        "        # 'Emissionsland:'\n",
         "        myList2.append('Emissionsland:')\n",
         "        myList2.append('Deutschland')\n",
         "\n",
+        "        # 'Devisenkurs:'\n",
         "        myList2.append('n.a.')\n",
         "        myList2.append('n.a.')\n",
         "        myList2.append('n.a.')\n",
         "\n",
+        "        # 'Dividende' / 'Ausschüttung'\n",
+        "        myList2.append('Einloesung:')\n",
+        "        index1 = search_list(myList1, 'Gunsten')\n",
+        "        myList2.append('Bruttobetrag:')\n",
+        "        myList2.append(myList1[index1+3])\n",
+        "        myList2.append(myList1[index1+4]) # Convert to float\n",
+        "\n",
+        "        # 'Quellensteuer'\n",
+        "        myList2.append('n.a.')\n",
         "        myList2.append('n.a.')\n",
         "        myList2.append('n.a.')\n",
         "        myList2.append('n.a.')\n",
         "        myList2.append('n.a.')\n",
         "\n",
-        "        myList2.append('n.a.')\n",
-        "        myList2.append('n.a.')\n",
-        "        myList2.append('n.a.')\n",
-        "        myList2.append('n.a.')\n",
-        "        myList2.append('n.a.')\n",
         "\n",
-        "        myList2.append('n.a.')\n",
         "\n",
         "        print(len(myList2))\n",
         "\n",
@@ -473,7 +507,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1CykMY9gHLYEVyR7SUAtl65eZ_YLduco6",
-      "authorship_tag": "ABX9TyOu2Sexr4vz2aK5jbeHrTQn",
+      "authorship_tag": "ABX9TyPyh9OZqnlULQZQjog8e29y",
       "include_colab_link": true
     },
     "kernelspec": {
