Mit Colab erstellt

--- a/Mirko_Divididende.ipynb
+++ b/Mirko_Divididende.ipynb
@@ -18,7 +18,9 @@
       },
       "outputs": [],
       "source": [
+        "from pickle import NONE\n",
         "import os\n",
+        "import sys\n",
         "!pip install PyPDF2\n",
         "import PyPDF2\n",
         "import pandas as pd\n",
@@ -64,7 +66,7 @@
         "text_dump     = ''\n",
         "text          = ''\n",
         "filename      = ''\n",
-        "list_items = ['Depotnr.:','Depotbestand','Wertpapier-Bezeichnung','WKN/ISIN','per','Emissionsland:', 'STK','Bruttobetrag:', 'Quellensteuer', 'Dividende', 'Ausschüttung', 'Zinsgutschrift']\n",
+        "#list_items = ['Depotnr.:','Depotbestand','Wertpapier-Bezeichnung','WKN/ISIN','per','Emissionsland:', 'STK','Bruttobetrag:', 'Quellensteuer', 'Dividende', 'Ausschüttung', 'Zinsgutschrift']\n",
         "myList_all = []\n",
         "myList_processed = []\n",
         "Konto         = ''\n",
@@ -75,7 +77,9 @@
         "  if python_indices:\n",
         "    return int(python_indices[0])\n",
         "  else:\n",
-        "    return -1  # or None or raise a custom error\n",
+        "    print(f\"'{pstring}' not found in text.\")\n",
+        "    sys.exit(1)  # Exit with a non-zero status (indicates error)\n",
+        "    #return -1  # or None or raise a custom error\n",
         "\n",
         "\n",
         "# Find first occurance of item in list of lists\n",
@@ -88,9 +92,10 @@
         "\n",
         "# convert_string2float\n",
         "def convert_string2float(pstring):\n",
-        "  temp  = pstring.replace(',','.')  # Convert to float\n",
-        "  temp2 = float(temp) # Convert to float\n",
-        "  return temp2\n",
+        "  temp  = pstring.replace('.','')  # remove 1000 '.'\n",
+        "  temp2  = temp.replace(',','.')  # Replace german ',' to Python float '.'\n",
+        "  temp3 = float(temp2) # Convert to float\n",
+        "  return temp3\n",
         "\n",
         "\n",
         "\n",
@@ -281,11 +286,12 @@
         "\n",
         "    # Kupon Staatsanleihe, die noch gehalten wird ##################\n",
         "    elif ZinsenStaatsanleihe_b == True :\n",
-        "        print(\"Zinsen Staatsanleihe\")\n",
+        "        print(\"Zinsen Staatsanleihe, die noch gehalten wird\")\n",
+        "        print(myList1)\n",
         "\n",
         "        # Depotnummer\n",
         "        index1 = search_list(myList1, 'Depotnummer:')\n",
-        "        myList2.append(myList1[index1])\n",
+        "        myList2.append('Depotnr.:')\n",
         "        myList2.append(myList1[index1+1])\n",
         "\n",
         "        # 'Inhaber'\n",
@@ -324,9 +330,10 @@
         "\n",
         "        # 'Dividende' / 'Ausschüttung'\n",
         "        myList2.append('Kupon:')\n",
-        "        myList2.append('n.a.')\n",
-        "        myList2.append('n.a.')\n",
-        "        myList2.append('n.a.')\n",
+        "        index1 = search_list(myList1, 'Gunsten')\n",
+        "        myList2.append('Bruttobetrag:')\n",
+        "        myList2.append(myList1[index1+3])\n",
+        "        myList2.append(convert_string2float(myList1[index1+4])) # Convert to float\n",
         "\n",
         "        # 'Quellensteuer'\n",
         "        myList2.append('n.a.')\n",
@@ -338,15 +345,14 @@
         "\n",
         "        print(len(myList2))\n",
         "\n",
-        "    # Staatsanleihe gehalten bis Faelligkeit ##################\n",
+        "    # ZERO KUPON Staatsanleihe gehalten bis Faelligkeit ##################\n",
         "    elif AnleiheEinloesung_b == True :\n",
-        "        print(\"Anleihe bis Faelligkeit gehalten\")\n",
-        "\n",
+        "        print(\"ZERO KUPON Anleihe bis Faelligkeit gehalten\")\n",
         "        print(myList1)\n",
         "\n",
         "        # Depotnummer\n",
         "        index1 = search_list(myList1, 'Depotnummer:')\n",
-        "        myList2.append(myList1[index1])\n",
+        "        myList2.append('Depotnr.:')\n",
         "        myList2.append(myList1[index1+1])\n",
         "\n",
         "        # 'Inhaber'\n",
@@ -388,7 +394,12 @@
         "        index1 = search_list(myList1, 'Gunsten')\n",
         "        myList2.append('Bruttobetrag:')\n",
         "        myList2.append(myList1[index1+3])\n",
-        "        myList2.append(myList1[index1+4]) # Convert to float\n",
+        "        auszahlung = convert_string2float(myList1[index1+4])\n",
+        "\n",
+        "        index1 = search_list(myList1, 'Stichtag')\n",
+        "        einzahlung = convert_string2float(myList1[index1+2])\n",
+        "        ertrag = auszahlung + einzahlung # Convert to float\n",
+        "        myList2.append(ertrag)\n",
         "\n",
         "        # 'Quellensteuer'\n",
         "        myList2.append('n.a.')\n",
@@ -420,14 +431,18 @@
         "          # Read the PDF file\n",
         "          pdf_reader = PyPDF2.PdfReader(pdf_file)\n",
         "\n",
-        "          # Print the number of pages\n",
-        "          #print(len(pdf_reader.pages))\n",
+        "          i = 0\n",
+        "          page = 0\n",
+        "          page_text = str()\n",
+        "          text = str()\n",
         "\n",
-        "          # Get the first page\n",
-        "          page = pdf_reader.pages[0]\n",
+        "          # Extract the text of all pages\n",
+        "          for i, page in enumerate(pdf_reader.pages):\n",
         "\n",
-        "          # Extract the text from the first page\n",
-        "          text = page.extract_text()\n",
+        "            page_text = page.extract_text()\n",
+        "\n",
+        "            if page_text:  # Avoid appending None\n",
+        "              text += page_text + \"\\n\"  # Add new line between pages\n",
         "\n",
         "          # Print the text\n",
         "          #print(text)\n",
@@ -507,7 +522,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1CykMY9gHLYEVyR7SUAtl65eZ_YLduco6",
-      "authorship_tag": "ABX9TyPyh9OZqnlULQZQjog8e29y",
+      "authorship_tag": "ABX9TyMRPMZNyHeYMUqjEmwDcDoU",
       "include_colab_link": true
     },
     "kernelspec": {
